// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FloatingActionButton /> (native) should render as an icon-only button when children is omitted 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    bottom="34px"
    data-blade-component="floating-action-button"
    display="flex"
    flexDirection="row"
    justifyContent="flex-end"
    left="0px"
    pointerEvents="box-none"
    position="absolute"
    right="0px"
    style={
      [
        {
          "bottom": 34,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "left": 0,
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
          "pointerEvents": "box-none",
          "position": "absolute",
          "right": 0,
          "zIndex": 99,
        },
      ]
    }
    zIndex={99}
  >
    <View
      borderRadius="max"
      data-blade-component="base-box"
      elevation="midRaised"
      style={
        [
          {
            "borderRadius": 9999,
          },
          {
            "elevation": 16,
            "shadowColor": "hsla(200, 10%, 18%, 1)",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.06,
            "shadowRadius": 4,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityLabel="Create payment"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        borderRadius={9999}
        buttonPaddingBottom="0px"
        buttonPaddingLeft="0px"
        buttonPaddingRight="0px"
        buttonPaddingTop="0px"
        collapsable={false}
        color="primary"
        data-blade-component="button"
        defaultBackgroundColor="hsla(218, 89%, 51%, 1)"
        defaultBoxShadow="inset 0 -1.5px 0px 0px hsla(218, 87%, 43%, 1), inset 0 0px 0px 0.5px hsla(218, 89%, 51%, 1), inset 0 1.5px 0px 0px hsla(0, 0%, 100%, 0.18), inset 0 -2px 0px 0px hsla(0, 0%, 100%, 0.18)"
        focusBackgroundColor="hsla(218, 87%, 43%, 1)"
        focusBoxShadow="inset 0 -1.5px 0px 0px hsla(218, 87%, 43%, 1), inset 0 0px 0px 0.5px hsla(218, 87%, 43%, 1), inset 0 1.5px 0px 0px hsla(0, 0%, 100%, 0.18), inset 0 -2px 0px 0px hsla(0, 0%, 100%, 0.18)"
        focusRingColor="hsla(218, 89%, 51%, 0.18)"
        focusable={true}
        height="48px"
        hoverBackgroundColor="hsla(218, 87%, 43%, 1)"
        hoverBoxShadow="inset 0 -1.5px 0px 0px hsla(218, 87%, 43%, 1), inset 0 0px 0px 0.5px hsla(218, 87%, 43%, 1), inset 0 1.5px 0px 0px hsla(0, 0%, 100%, 0.18), inset 0 -2px 0px 0px hsla(0, 0%, 100%, 0.18)"
        hoverIconColor="hsla(0, 0%, 100%, 1)"
        isFullWidth={false}
        isLoading={false}
        isPressed={false}
        minHeight="48px"
        motionDuration="duration.xquick"
        motionEasing="easing.standard"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        role="button"
        size="large"
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "center",
              "backgroundColor": "hsla(218, 89%, 51%, 1)",
              "borderColor": "black",
              "borderRadius": 9999,
              "borderStyle": "solid",
              "borderWidth": 0,
              "cursor": "pointer",
              "display": "flex",
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "minHeight": 48,
              "overflow": "hidden",
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationColor": "black",
              "textDecorationLine": "none",
              "textDecorationStyle": "solid",
              "width": 48,
            },
            {
              "backgroundColor": "hsla(218, 89%, 51%, 1)",
            },
          ]
        }
        type="button"
        width="48px"
      >
        <View
          pointerEvents="none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <RNSVGSvgView
            bbHeight="100%"
            bbWidth="100%"
            focusable={false}
            pointerEvents="none"
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                {
                  "flex": 0,
                  "height": "100%",
                  "width": "100%",
                },
              ]
            }
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGDefs>
                <RNSVGLinearGradient
                  gradient={
                    [
                      0,
                      -1,
                      1,
                      16777215,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={0}
                  name="topFade-r1"
                  x1="0"
                  x2="0"
                  y1="0"
                  y2="1"
                />
                <RNSVGLinearGradient
                  gradient={
                    [
                      0,
                      -1,
                      1,
                      16777215,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={0}
                  name="bottomFade-r1"
                  x1="0"
                  x2="0"
                  y1="1"
                  y2="0"
                />
                <RNSVGMask
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  height="100%"
                  maskContentUnits={1}
                  maskUnits={0}
                  name="topMask-r1"
                  width="100%"
                  x="0%"
                  y="0%"
                >
                  <RNSVGRect
                    fill={
                      {
                        "brushRef": "topFade-r1",
                        "type": 1,
                      }
                    }
                    height="20%"
                    propList={
                      [
                        "fill",
                      ]
                    }
                    width="100%"
                    x="0"
                    y="0"
                  />
                </RNSVGMask>
                <RNSVGMask
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  height="100%"
                  maskContentUnits={1}
                  maskUnits={0}
                  name="bottomMask-r1"
                  width="100%"
                  x="0%"
                  y="0%"
                >
                  <RNSVGRect
                    fill={
                      {
                        "brushRef": "bottomFade-r1",
                        "type": 1,
                      }
                    }
                    height="20%"
                    propList={
                      [
                        "fill",
                      ]
                    }
                    width="100%"
                    x="0"
                    y="80%"
                  />
                </RNSVGMask>
                <RNSVGRadialGradient
                  cx={0}
                  cy={0}
                  fx={0}
                  fy={0}
                  gradient={
                    [
                      0,
                      788529151,
                      1,
                      16777215,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={1}
                  name="btnGlow-r1"
                  rx={64}
                  ry={64}
                />
              </RNSVGDefs>
              <RNSVGRect
                fill={null}
                height="100%"
                mask="bottomMask-r1"
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                  ]
                }
                rx={9999}
                ry={9999}
                stroke={
                  {
                    "payload": 788529151,
                    "type": 0,
                  }
                }
                strokeWidth={7}
                width="100%"
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={null}
                height="100%"
                mask="topMask-r1"
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                  ]
                }
                rx={9999}
                ry={9999}
                stroke={
                  {
                    "payload": 788529151,
                    "type": 0,
                  }
                }
                strokeWidth={4}
                width="100%"
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={null}
                height="100%"
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                  ]
                }
                rx={9999}
                ry={9999}
                stroke={
                  {
                    "payload": 4279461105,
                    "type": 0,
                  }
                }
                strokeWidth={1}
                width="100%"
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={null}
                height="100%"
                mask="bottomMask-r1"
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                  ]
                }
                rx={9999}
                ry={9999}
                stroke={
                  {
                    "payload": 4279129293,
                    "type": 0,
                  }
                }
                strokeWidth={5}
                width="100%"
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={
                  {
                    "brushRef": "btnGlow-r1",
                    "type": 1,
                  }
                }
                height="100%"
                propList={
                  [
                    "fill",
                  ]
                }
                rx={9999}
                ry={9999}
                width="100%"
                x={0}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <View
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            alignItems="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            isHidden={false}
            justifyContent="center"
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexBasis": 0,
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "justifyContent": "center",
                  "zIndex": 1,
                },
                {
                  "opacity": 1,
                },
              ]
            }
            zIndex={1}
          >
            <View
              alignItems="center"
              data-blade-component="base-box"
              display="flex"
              justifyContent="center"
              style={
                [
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <RNSVGSvgView
                accessibilityElementsHidden={true}
                align="xMidYMid"
                bbHeight="24px"
                bbWidth="24px"
                data-blade-component="icon"
                fill="none"
                focusable={false}
                height="24px"
                importantForAccessibility="no-hide-descendants"
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    [
                      {},
                    ],
                    {
                      "flex": 0,
                      "height": 24,
                      "width": 24,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width="24px"
              >
                <RNSVGGroup
                  fill={null}
                  propList={
                    [
                      "fill",
                    ]
                  }
                >
                  <RNSVGPath
                    d="M13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5V11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H11V19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19V13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11H13V5Z"
                    fill={
                      {
                        "payload": 4294967295,
                        "type": 0,
                      }
                    }
                    propList={
                      [
                        "fill",
                      ]
                    }
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<FloatingActionButton /> (native) should render neutral color 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    bottom="34px"
    data-blade-component="floating-action-button"
    display="flex"
    flexDirection="row"
    justifyContent="flex-end"
    left="0px"
    pointerEvents="box-none"
    position="absolute"
    right="0px"
    style={
      [
        {
          "bottom": 34,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "left": 0,
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
          "pointerEvents": "box-none",
          "position": "absolute",
          "right": 0,
          "zIndex": 99,
        },
      ]
    }
    zIndex={99}
  >
    <View
      borderRadius="max"
      data-blade-component="base-box"
      elevation="midRaised"
      style={
        [
          {
            "borderRadius": 9999,
          },
          {
            "elevation": 16,
            "shadowColor": "hsla(200, 10%, 18%, 1)",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.06,
            "shadowRadius": 4,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        borderRadius={9999}
        buttonPaddingBottom="0px"
        buttonPaddingLeft="16px"
        buttonPaddingRight="16px"
        buttonPaddingTop="0px"
        collapsable={false}
        color="neutral"
        data-blade-component="button"
        defaultBackgroundColor="hsla(0, 0%, 0%, 1)"
        defaultBoxShadow="inset 0 -1.5px 0px 0px hsla(0, 0%, 0%, 1), inset 0 0px 0px 0.5px hsla(0, 0%, 0%, 1), inset 0 1.5px 0px 0px hsla(0, 0%, 100%, 0.32), inset 0 -2px 0px 0px hsla(0, 0%, 100%, 0.32)"
        focusBackgroundColor="hsla(0, 0%, 0%, 0.88)"
        focusBoxShadow="inset 0 -1.5px 0px 0px hsla(0, 0%, 0%, 1), inset 0 0px 0px 0.5px hsla(0, 0%, 0%, 1), inset 0 1.5px 0px 0px hsla(0, 0%, 100%, 0.32), inset 0 -2px 0px 0px hsla(0, 0%, 100%, 0.32)"
        focusRingColor="hsla(206, 10%, 29%, 0.12)"
        focusable={true}
        hoverBackgroundColor="hsla(0, 0%, 0%, 0.88)"
        hoverBoxShadow="inset 0 -1.5px 0px 0px hsla(0, 0%, 0%, 1), inset 0 0px 0px 0.5px hsla(0, 0%, 0%, 1), inset 0 1.5px 0px 0px hsla(0, 0%, 100%, 0.32), inset 0 -2px 0px 0px hsla(0, 0%, 100%, 0.32)"
        hoverIconColor="hsla(0, 0%, 100%, 1)"
        isFullWidth={false}
        isLoading={false}
        isPressed={false}
        minHeight="48px"
        motionDuration="duration.xquick"
        motionEasing="easing.standard"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        role="button"
        size="large"
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "center",
              "backgroundColor": "hsla(0, 0%, 0%, 1)",
              "borderColor": "black",
              "borderRadius": 9999,
              "borderStyle": "solid",
              "borderWidth": 0,
              "cursor": "pointer",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "minHeight": 48,
              "overflow": "hidden",
              "paddingBottom": 0,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 0,
              "textDecorationColor": "black",
              "textDecorationLine": "none",
              "textDecorationStyle": "solid",
              "width": "auto",
            },
            {
              "backgroundColor": "hsla(0, 0%, 0%, 1)",
            },
          ]
        }
        type="button"
      >
        <View
          pointerEvents="none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <RNSVGSvgView
            bbHeight="100%"
            bbWidth="100%"
            focusable={false}
            pointerEvents="none"
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                {
                  "flex": 0,
                  "height": "100%",
                  "width": "100%",
                },
              ]
            }
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGDefs>
                <RNSVGLinearGradient
                  gradient={
                    [
                      0,
                      -1,
                      1,
                      16777215,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={0}
                  name="topFade-r4"
                  x1="0"
                  x2="0"
                  y1="0"
                  y2="1"
                />
                <RNSVGLinearGradient
                  gradient={
                    [
                      0,
                      -1,
                      1,
                      16777215,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={0}
                  name="bottomFade-r4"
                  x1="0"
                  x2="0"
                  y1="1"
                  y2="0"
                />
                <RNSVGMask
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  height="100%"
                  maskContentUnits={1}
                  maskUnits={0}
                  name="topMask-r4"
                  width="100%"
                  x="0%"
                  y="0%"
                >
                  <RNSVGRect
                    fill={
                      {
                        "brushRef": "topFade-r4",
                        "type": 1,
                      }
                    }
                    height="20%"
                    propList={
                      [
                        "fill",
                      ]
                    }
                    width="100%"
                    x="0"
                    y="0"
                  />
                </RNSVGMask>
                <RNSVGMask
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  height="100%"
                  maskContentUnits={1}
                  maskUnits={0}
                  name="bottomMask-r4"
                  width="100%"
                  x="0%"
                  y="0%"
                >
                  <RNSVGRect
                    fill={
                      {
                        "brushRef": "bottomFade-r4",
                        "type": 1,
                      }
                    }
                    height="20%"
                    propList={
                      [
                        "fill",
                      ]
                    }
                    width="100%"
                    x="0"
                    y="80%"
                  />
                </RNSVGMask>
                <RNSVGRadialGradient
                  cx={0}
                  cy={0}
                  fx={0}
                  fy={0}
                  gradient={
                    [
                      0,
                      788529151,
                      1,
                      16777215,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={1}
                  name="btnGlow-r4"
                  rx={64}
                  ry={64}
                />
              </RNSVGDefs>
              <RNSVGRect
                fill={null}
                height="100%"
                mask="bottomMask-r4"
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                  ]
                }
                rx={9999}
                ry={9999}
                stroke={
                  {
                    "payload": 1392508927,
                    "type": 0,
                  }
                }
                strokeWidth={7}
                width="100%"
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={null}
                height="100%"
                mask="topMask-r4"
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                  ]
                }
                rx={9999}
                ry={9999}
                stroke={
                  {
                    "payload": 1392508927,
                    "type": 0,
                  }
                }
                strokeWidth={4}
                width="100%"
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={null}
                height="100%"
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                  ]
                }
                rx={9999}
                ry={9999}
                stroke={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                strokeWidth={1}
                width="100%"
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={null}
                height="100%"
                mask="bottomMask-r4"
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                  ]
                }
                rx={9999}
                ry={9999}
                stroke={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                strokeWidth={5}
                width="100%"
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={
                  {
                    "brushRef": "btnGlow-r4",
                    "type": 1,
                  }
                }
                height="100%"
                propList={
                  [
                    "fill",
                  ]
                }
                rx={9999}
                ry={9999}
                width="100%"
                x={0}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <View
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            alignItems="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            isHidden={false}
            justifyContent="center"
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexBasis": 0,
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "justifyContent": "center",
                  "zIndex": 1,
                },
                {
                  "opacity": 1,
                },
              ]
            }
            zIndex={1}
          >
            <View
              alignItems="center"
              data-blade-component="base-box"
              display="flex"
              justifyContent="center"
              style={
                [
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <RNSVGSvgView
                accessibilityElementsHidden={true}
                align="xMidYMid"
                bbHeight="24px"
                bbWidth="24px"
                data-blade-component="icon"
                fill="none"
                focusable={false}
                height="24px"
                importantForAccessibility="no-hide-descendants"
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    [
                      {},
                    ],
                    {
                      "flex": 0,
                      "height": 24,
                      "width": 24,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width="24px"
              >
                <RNSVGGroup
                  fill={null}
                  propList={
                    [
                      "fill",
                    ]
                  }
                >
                  <RNSVGPath
                    d="M13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5V11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H11V19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19V13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11H13V5Z"
                    fill={
                      {
                        "payload": 4294967295,
                        "type": 0,
                      }
                    }
                    propList={
                      [
                        "fill",
                      ]
                    }
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
            <Text
              accessible={true}
              color="interactive.text.onNeutral.normal"
              data-blade-component="base-text"
              fontSize={200}
              fontWeight="medium"
              lineHeight={200}
              marginX="spacing.2"
              style={
                [
                  {
                    "color": "hsla(0, 0%, 100%, 1)",
                    "fontFamily": "Inter",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "500",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "marginBottom": 0,
                    "marginLeft": 4,
                    "marginRight": 4,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textAlign": "center",
                    "textDecorationLine": "none",
                  },
                ]
              }
              textAlign="center"
            >
              Create payment
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<FloatingActionButton /> (native) should render primary color 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    bottom="34px"
    data-blade-component="floating-action-button"
    display="flex"
    flexDirection="row"
    justifyContent="flex-end"
    left="0px"
    pointerEvents="box-none"
    position="absolute"
    right="0px"
    style={
      [
        {
          "bottom": 34,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "left": 0,
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
          "pointerEvents": "box-none",
          "position": "absolute",
          "right": 0,
          "zIndex": 99,
        },
      ]
    }
    zIndex={99}
  >
    <View
      borderRadius="max"
      data-blade-component="base-box"
      elevation="midRaised"
      style={
        [
          {
            "borderRadius": 9999,
          },
          {
            "elevation": 16,
            "shadowColor": "hsla(200, 10%, 18%, 1)",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.06,
            "shadowRadius": 4,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        borderRadius={9999}
        buttonPaddingBottom="0px"
        buttonPaddingLeft="16px"
        buttonPaddingRight="16px"
        buttonPaddingTop="0px"
        collapsable={false}
        color="primary"
        data-blade-component="button"
        defaultBackgroundColor="hsla(218, 89%, 51%, 1)"
        defaultBoxShadow="inset 0 -1.5px 0px 0px hsla(218, 87%, 43%, 1), inset 0 0px 0px 0.5px hsla(218, 89%, 51%, 1), inset 0 1.5px 0px 0px hsla(0, 0%, 100%, 0.18), inset 0 -2px 0px 0px hsla(0, 0%, 100%, 0.18)"
        focusBackgroundColor="hsla(218, 87%, 43%, 1)"
        focusBoxShadow="inset 0 -1.5px 0px 0px hsla(218, 87%, 43%, 1), inset 0 0px 0px 0.5px hsla(218, 87%, 43%, 1), inset 0 1.5px 0px 0px hsla(0, 0%, 100%, 0.18), inset 0 -2px 0px 0px hsla(0, 0%, 100%, 0.18)"
        focusRingColor="hsla(218, 89%, 51%, 0.18)"
        focusable={true}
        hoverBackgroundColor="hsla(218, 87%, 43%, 1)"
        hoverBoxShadow="inset 0 -1.5px 0px 0px hsla(218, 87%, 43%, 1), inset 0 0px 0px 0.5px hsla(218, 87%, 43%, 1), inset 0 1.5px 0px 0px hsla(0, 0%, 100%, 0.18), inset 0 -2px 0px 0px hsla(0, 0%, 100%, 0.18)"
        hoverIconColor="hsla(0, 0%, 100%, 1)"
        isFullWidth={false}
        isLoading={false}
        isPressed={false}
        minHeight="48px"
        motionDuration="duration.xquick"
        motionEasing="easing.standard"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        role="button"
        size="large"
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "center",
              "backgroundColor": "hsla(218, 89%, 51%, 1)",
              "borderColor": "black",
              "borderRadius": 9999,
              "borderStyle": "solid",
              "borderWidth": 0,
              "cursor": "pointer",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "minHeight": 48,
              "overflow": "hidden",
              "paddingBottom": 0,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 0,
              "textDecorationColor": "black",
              "textDecorationLine": "none",
              "textDecorationStyle": "solid",
              "width": "auto",
            },
            {
              "backgroundColor": "hsla(218, 89%, 51%, 1)",
            },
          ]
        }
        type="button"
      >
        <View
          pointerEvents="none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <RNSVGSvgView
            bbHeight="100%"
            bbWidth="100%"
            focusable={false}
            pointerEvents="none"
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                {
                  "flex": 0,
                  "height": "100%",
                  "width": "100%",
                },
              ]
            }
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGDefs>
                <RNSVGLinearGradient
                  gradient={
                    [
                      0,
                      -1,
                      1,
                      16777215,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={0}
                  name="topFade-r2"
                  x1="0"
                  x2="0"
                  y1="0"
                  y2="1"
                />
                <RNSVGLinearGradient
                  gradient={
                    [
                      0,
                      -1,
                      1,
                      16777215,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={0}
                  name="bottomFade-r2"
                  x1="0"
                  x2="0"
                  y1="1"
                  y2="0"
                />
                <RNSVGMask
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  height="100%"
                  maskContentUnits={1}
                  maskUnits={0}
                  name="topMask-r2"
                  width="100%"
                  x="0%"
                  y="0%"
                >
                  <RNSVGRect
                    fill={
                      {
                        "brushRef": "topFade-r2",
                        "type": 1,
                      }
                    }
                    height="20%"
                    propList={
                      [
                        "fill",
                      ]
                    }
                    width="100%"
                    x="0"
                    y="0"
                  />
                </RNSVGMask>
                <RNSVGMask
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  height="100%"
                  maskContentUnits={1}
                  maskUnits={0}
                  name="bottomMask-r2"
                  width="100%"
                  x="0%"
                  y="0%"
                >
                  <RNSVGRect
                    fill={
                      {
                        "brushRef": "bottomFade-r2",
                        "type": 1,
                      }
                    }
                    height="20%"
                    propList={
                      [
                        "fill",
                      ]
                    }
                    width="100%"
                    x="0"
                    y="80%"
                  />
                </RNSVGMask>
                <RNSVGRadialGradient
                  cx={0}
                  cy={0}
                  fx={0}
                  fy={0}
                  gradient={
                    [
                      0,
                      788529151,
                      1,
                      16777215,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={1}
                  name="btnGlow-r2"
                  rx={64}
                  ry={64}
                />
              </RNSVGDefs>
              <RNSVGRect
                fill={null}
                height="100%"
                mask="bottomMask-r2"
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                  ]
                }
                rx={9999}
                ry={9999}
                stroke={
                  {
                    "payload": 788529151,
                    "type": 0,
                  }
                }
                strokeWidth={7}
                width="100%"
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={null}
                height="100%"
                mask="topMask-r2"
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                  ]
                }
                rx={9999}
                ry={9999}
                stroke={
                  {
                    "payload": 788529151,
                    "type": 0,
                  }
                }
                strokeWidth={4}
                width="100%"
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={null}
                height="100%"
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                  ]
                }
                rx={9999}
                ry={9999}
                stroke={
                  {
                    "payload": 4279461105,
                    "type": 0,
                  }
                }
                strokeWidth={1}
                width="100%"
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={null}
                height="100%"
                mask="bottomMask-r2"
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                  ]
                }
                rx={9999}
                ry={9999}
                stroke={
                  {
                    "payload": 4279129293,
                    "type": 0,
                  }
                }
                strokeWidth={5}
                width="100%"
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={
                  {
                    "brushRef": "btnGlow-r2",
                    "type": 1,
                  }
                }
                height="100%"
                propList={
                  [
                    "fill",
                  ]
                }
                rx={9999}
                ry={9999}
                width="100%"
                x={0}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <View
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            alignItems="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            isHidden={false}
            justifyContent="center"
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexBasis": 0,
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "justifyContent": "center",
                  "zIndex": 1,
                },
                {
                  "opacity": 1,
                },
              ]
            }
            zIndex={1}
          >
            <View
              alignItems="center"
              data-blade-component="base-box"
              display="flex"
              justifyContent="center"
              style={
                [
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <RNSVGSvgView
                accessibilityElementsHidden={true}
                align="xMidYMid"
                bbHeight="24px"
                bbWidth="24px"
                data-blade-component="icon"
                fill="none"
                focusable={false}
                height="24px"
                importantForAccessibility="no-hide-descendants"
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    [
                      {},
                    ],
                    {
                      "flex": 0,
                      "height": 24,
                      "width": 24,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width="24px"
              >
                <RNSVGGroup
                  fill={null}
                  propList={
                    [
                      "fill",
                    ]
                  }
                >
                  <RNSVGPath
                    d="M13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5V11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H11V19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19V13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11H13V5Z"
                    fill={
                      {
                        "payload": 4294967295,
                        "type": 0,
                      }
                    }
                    propList={
                      [
                        "fill",
                      ]
                    }
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
            <Text
              accessible={true}
              color="interactive.text.onPrimary.normal"
              data-blade-component="base-text"
              fontSize={200}
              fontWeight="medium"
              lineHeight={200}
              marginX="spacing.2"
              style={
                [
                  {
                    "color": "hsla(0, 0%, 100%, 1)",
                    "fontFamily": "Inter",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "500",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "marginBottom": 0,
                    "marginLeft": 4,
                    "marginRight": 4,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textAlign": "center",
                    "textDecorationLine": "none",
                  },
                ]
              }
              textAlign="center"
            >
              Create payment
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<FloatingActionButton /> (native) should render white color 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    bottom="34px"
    data-blade-component="floating-action-button"
    display="flex"
    flexDirection="row"
    justifyContent="flex-end"
    left="0px"
    pointerEvents="box-none"
    position="absolute"
    right="0px"
    style={
      [
        {
          "bottom": 34,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "left": 0,
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
          "pointerEvents": "box-none",
          "position": "absolute",
          "right": 0,
          "zIndex": 99,
        },
      ]
    }
    zIndex={99}
  >
    <View
      borderRadius="max"
      data-blade-component="base-box"
      elevation="midRaised"
      style={
        [
          {
            "borderRadius": 9999,
          },
          {
            "elevation": 16,
            "shadowColor": "hsla(200, 10%, 18%, 1)",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.06,
            "shadowRadius": 4,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        borderRadius={9999}
        buttonPaddingBottom="0px"
        buttonPaddingLeft="16px"
        buttonPaddingRight="16px"
        buttonPaddingTop="0px"
        collapsable={false}
        color="white"
        data-blade-component="button"
        defaultBackgroundColor="hsla(0, 0%, 100%, 1)"
        defaultBoxShadow="inset 0 -1.5px 0px 0px hsla(0, 0%, 0%, 0.18), inset 0 0px 0px 0.5px hsla(0, 0%, 0%, 0.18)"
        focusBackgroundColor="hsla(0, 0%, 100%, 0.8)"
        focusBoxShadow="inset 0 -1.5px 0px 0px hsla(0, 0%, 0%, 0.18), inset 0 0px 0px 0.5px hsla(0, 0%, 0%, 0.18)"
        focusRingColor="hsla(218, 89%, 51%, 0.18)"
        focusable={true}
        hoverBackgroundColor="hsla(0, 0%, 100%, 0.8)"
        hoverBoxShadow="inset 0 -1.5px 0px 0px hsla(0, 0%, 0%, 0.18), inset 0 0px 0px 0.5px hsla(0, 0%, 0%, 0.18)"
        hoverIconColor="hsla(0, 0%, 0%, 0.72)"
        isFullWidth={false}
        isLoading={false}
        isPressed={false}
        minHeight="48px"
        motionDuration="duration.xquick"
        motionEasing="easing.standard"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        role="button"
        size="large"
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "center",
              "backgroundColor": "hsla(0, 0%, 100%, 1)",
              "borderColor": "black",
              "borderRadius": 9999,
              "borderStyle": "solid",
              "borderWidth": 0,
              "cursor": "pointer",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "minHeight": 48,
              "overflow": "hidden",
              "paddingBottom": 0,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 0,
              "textDecorationColor": "black",
              "textDecorationLine": "none",
              "textDecorationStyle": "solid",
              "width": "auto",
            },
            {
              "backgroundColor": "hsla(0, 0%, 100%, 1)",
            },
          ]
        }
        type="button"
      >
        <View
          pointerEvents="none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <RNSVGSvgView
            bbHeight="100%"
            bbWidth="100%"
            focusable={false}
            pointerEvents="none"
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                {
                  "flex": 0,
                  "height": "100%",
                  "width": "100%",
                },
              ]
            }
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGDefs>
                <RNSVGLinearGradient
                  gradient={
                    [
                      0,
                      -1,
                      1,
                      16777215,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={0}
                  name="topFade-r3"
                  x1="0"
                  x2="0"
                  y1="0"
                  y2="1"
                />
                <RNSVGLinearGradient
                  gradient={
                    [
                      0,
                      -1,
                      1,
                      16777215,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={0}
                  name="bottomFade-r3"
                  x1="0"
                  x2="0"
                  y1="1"
                  y2="0"
                />
                <RNSVGMask
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  height="100%"
                  maskContentUnits={1}
                  maskUnits={0}
                  name="topMask-r3"
                  width="100%"
                  x="0%"
                  y="0%"
                >
                  <RNSVGRect
                    fill={
                      {
                        "brushRef": "topFade-r3",
                        "type": 1,
                      }
                    }
                    height="20%"
                    propList={
                      [
                        "fill",
                      ]
                    }
                    width="100%"
                    x="0"
                    y="0"
                  />
                </RNSVGMask>
                <RNSVGMask
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  height="100%"
                  maskContentUnits={1}
                  maskUnits={0}
                  name="bottomMask-r3"
                  width="100%"
                  x="0%"
                  y="0%"
                >
                  <RNSVGRect
                    fill={
                      {
                        "brushRef": "bottomFade-r3",
                        "type": 1,
                      }
                    }
                    height="20%"
                    propList={
                      [
                        "fill",
                      ]
                    }
                    width="100%"
                    x="0"
                    y="80%"
                  />
                </RNSVGMask>
                <RNSVGRadialGradient
                  cx={0}
                  cy={0}
                  fx={0}
                  fy={0}
                  gradient={
                    [
                      0,
                      788529151,
                      1,
                      16777215,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={1}
                  name="btnGlow-r3"
                  rx={64}
                  ry={64}
                />
              </RNSVGDefs>
              <RNSVGRect
                fill={null}
                height="100%"
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                  ]
                }
                rx={9999}
                ry={9999}
                stroke={
                  {
                    "payload": 771751936,
                    "type": 0,
                  }
                }
                strokeWidth={1}
                width="100%"
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={null}
                height="100%"
                mask="bottomMask-r3"
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                  ]
                }
                rx={9999}
                ry={9999}
                stroke={
                  {
                    "payload": 771751936,
                    "type": 0,
                  }
                }
                strokeWidth={5}
                width="100%"
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={
                  {
                    "brushRef": "btnGlow-r3",
                    "type": 1,
                  }
                }
                height="100%"
                propList={
                  [
                    "fill",
                  ]
                }
                rx={9999}
                ry={9999}
                width="100%"
                x={0}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <View
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            alignItems="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            isHidden={false}
            justifyContent="center"
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexBasis": 0,
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "justifyContent": "center",
                  "zIndex": 1,
                },
                {
                  "opacity": 1,
                },
              ]
            }
            zIndex={1}
          >
            <View
              alignItems="center"
              data-blade-component="base-box"
              display="flex"
              justifyContent="center"
              style={
                [
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <RNSVGSvgView
                accessibilityElementsHidden={true}
                align="xMidYMid"
                bbHeight="24px"
                bbWidth="24px"
                data-blade-component="icon"
                fill="none"
                focusable={false}
                height="24px"
                importantForAccessibility="no-hide-descendants"
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    [
                      {},
                    ],
                    {
                      "flex": 0,
                      "height": 24,
                      "width": 24,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width="24px"
              >
                <RNSVGGroup
                  fill={null}
                  propList={
                    [
                      "fill",
                    ]
                  }
                >
                  <RNSVGPath
                    d="M13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5V11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H11V19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19V13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11H13V5Z"
                    fill={
                      {
                        "payload": 3087007744,
                        "type": 0,
                      }
                    }
                    propList={
                      [
                        "fill",
                      ]
                    }
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
            <Text
              accessible={true}
              color="interactive.text.staticBlack.muted"
              data-blade-component="base-text"
              fontSize={200}
              fontWeight="medium"
              lineHeight={200}
              marginX="spacing.2"
              style={
                [
                  {
                    "color": "hsla(0, 0%, 0%, 0.72)",
                    "fontFamily": "Inter",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "500",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "marginBottom": 0,
                    "marginLeft": 4,
                    "marginRight": 4,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textAlign": "center",
                    "textDecorationLine": "none",
                  },
                ]
              }
              textAlign="center"
            >
              Create payment
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<FloatingActionButton /> (native) should render with a label 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    bottom="34px"
    data-blade-component="floating-action-button"
    display="flex"
    flexDirection="row"
    justifyContent="flex-end"
    left="0px"
    pointerEvents="box-none"
    position="absolute"
    right="0px"
    style={
      [
        {
          "bottom": 34,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "left": 0,
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
          "pointerEvents": "box-none",
          "position": "absolute",
          "right": 0,
          "zIndex": 99,
        },
      ]
    }
    zIndex={99}
  >
    <View
      borderRadius="max"
      data-blade-component="base-box"
      elevation="midRaised"
      style={
        [
          {
            "borderRadius": 9999,
          },
          {
            "elevation": 16,
            "shadowColor": "hsla(200, 10%, 18%, 1)",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.06,
            "shadowRadius": 4,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        borderRadius={9999}
        buttonPaddingBottom="0px"
        buttonPaddingLeft="16px"
        buttonPaddingRight="16px"
        buttonPaddingTop="0px"
        collapsable={false}
        color="primary"
        data-blade-component="button"
        defaultBackgroundColor="hsla(218, 89%, 51%, 1)"
        defaultBoxShadow="inset 0 -1.5px 0px 0px hsla(218, 87%, 43%, 1), inset 0 0px 0px 0.5px hsla(218, 89%, 51%, 1), inset 0 1.5px 0px 0px hsla(0, 0%, 100%, 0.18), inset 0 -2px 0px 0px hsla(0, 0%, 100%, 0.18)"
        focusBackgroundColor="hsla(218, 87%, 43%, 1)"
        focusBoxShadow="inset 0 -1.5px 0px 0px hsla(218, 87%, 43%, 1), inset 0 0px 0px 0.5px hsla(218, 87%, 43%, 1), inset 0 1.5px 0px 0px hsla(0, 0%, 100%, 0.18), inset 0 -2px 0px 0px hsla(0, 0%, 100%, 0.18)"
        focusRingColor="hsla(218, 89%, 51%, 0.18)"
        focusable={true}
        hoverBackgroundColor="hsla(218, 87%, 43%, 1)"
        hoverBoxShadow="inset 0 -1.5px 0px 0px hsla(218, 87%, 43%, 1), inset 0 0px 0px 0.5px hsla(218, 87%, 43%, 1), inset 0 1.5px 0px 0px hsla(0, 0%, 100%, 0.18), inset 0 -2px 0px 0px hsla(0, 0%, 100%, 0.18)"
        hoverIconColor="hsla(0, 0%, 100%, 1)"
        isFullWidth={false}
        isLoading={false}
        isPressed={false}
        minHeight="48px"
        motionDuration="duration.xquick"
        motionEasing="easing.standard"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        role="button"
        size="large"
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "center",
              "backgroundColor": "hsla(218, 89%, 51%, 1)",
              "borderColor": "black",
              "borderRadius": 9999,
              "borderStyle": "solid",
              "borderWidth": 0,
              "cursor": "pointer",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "minHeight": 48,
              "overflow": "hidden",
              "paddingBottom": 0,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 0,
              "textDecorationColor": "black",
              "textDecorationLine": "none",
              "textDecorationStyle": "solid",
              "width": "auto",
            },
            {
              "backgroundColor": "hsla(218, 89%, 51%, 1)",
            },
          ]
        }
        type="button"
      >
        <View
          pointerEvents="none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <RNSVGSvgView
            bbHeight="100%"
            bbWidth="100%"
            focusable={false}
            pointerEvents="none"
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                {
                  "flex": 0,
                  "height": "100%",
                  "width": "100%",
                },
              ]
            }
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGDefs>
                <RNSVGLinearGradient
                  gradient={
                    [
                      0,
                      -1,
                      1,
                      16777215,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={0}
                  name="topFade-r0"
                  x1="0"
                  x2="0"
                  y1="0"
                  y2="1"
                />
                <RNSVGLinearGradient
                  gradient={
                    [
                      0,
                      -1,
                      1,
                      16777215,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={0}
                  name="bottomFade-r0"
                  x1="0"
                  x2="0"
                  y1="1"
                  y2="0"
                />
                <RNSVGMask
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  height="100%"
                  maskContentUnits={1}
                  maskUnits={0}
                  name="topMask-r0"
                  width="100%"
                  x="0%"
                  y="0%"
                >
                  <RNSVGRect
                    fill={
                      {
                        "brushRef": "topFade-r0",
                        "type": 1,
                      }
                    }
                    height="20%"
                    propList={
                      [
                        "fill",
                      ]
                    }
                    width="100%"
                    x="0"
                    y="0"
                  />
                </RNSVGMask>
                <RNSVGMask
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  height="100%"
                  maskContentUnits={1}
                  maskUnits={0}
                  name="bottomMask-r0"
                  width="100%"
                  x="0%"
                  y="0%"
                >
                  <RNSVGRect
                    fill={
                      {
                        "brushRef": "bottomFade-r0",
                        "type": 1,
                      }
                    }
                    height="20%"
                    propList={
                      [
                        "fill",
                      ]
                    }
                    width="100%"
                    x="0"
                    y="80%"
                  />
                </RNSVGMask>
                <RNSVGRadialGradient
                  cx={0}
                  cy={0}
                  fx={0}
                  fy={0}
                  gradient={
                    [
                      0,
                      788529151,
                      1,
                      16777215,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={1}
                  name="btnGlow-r0"
                  rx={64}
                  ry={64}
                />
              </RNSVGDefs>
              <RNSVGRect
                fill={null}
                height="100%"
                mask="bottomMask-r0"
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                  ]
                }
                rx={9999}
                ry={9999}
                stroke={
                  {
                    "payload": 788529151,
                    "type": 0,
                  }
                }
                strokeWidth={7}
                width="100%"
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={null}
                height="100%"
                mask="topMask-r0"
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                  ]
                }
                rx={9999}
                ry={9999}
                stroke={
                  {
                    "payload": 788529151,
                    "type": 0,
                  }
                }
                strokeWidth={4}
                width="100%"
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={null}
                height="100%"
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                  ]
                }
                rx={9999}
                ry={9999}
                stroke={
                  {
                    "payload": 4279461105,
                    "type": 0,
                  }
                }
                strokeWidth={1}
                width="100%"
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={null}
                height="100%"
                mask="bottomMask-r0"
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                  ]
                }
                rx={9999}
                ry={9999}
                stroke={
                  {
                    "payload": 4279129293,
                    "type": 0,
                  }
                }
                strokeWidth={5}
                width="100%"
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={
                  {
                    "brushRef": "btnGlow-r0",
                    "type": 1,
                  }
                }
                height="100%"
                propList={
                  [
                    "fill",
                  ]
                }
                rx={9999}
                ry={9999}
                width="100%"
                x={0}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <View
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            alignItems="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            isHidden={false}
            justifyContent="center"
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexBasis": 0,
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "justifyContent": "center",
                  "zIndex": 1,
                },
                {
                  "opacity": 1,
                },
              ]
            }
            zIndex={1}
          >
            <View
              alignItems="center"
              data-blade-component="base-box"
              display="flex"
              justifyContent="center"
              style={
                [
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <RNSVGSvgView
                accessibilityElementsHidden={true}
                align="xMidYMid"
                bbHeight="24px"
                bbWidth="24px"
                data-blade-component="icon"
                fill="none"
                focusable={false}
                height="24px"
                importantForAccessibility="no-hide-descendants"
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    [
                      {},
                    ],
                    {
                      "flex": 0,
                      "height": 24,
                      "width": 24,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width="24px"
              >
                <RNSVGGroup
                  fill={null}
                  propList={
                    [
                      "fill",
                    ]
                  }
                >
                  <RNSVGPath
                    d="M13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5V11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H11V19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19V13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11H13V5Z"
                    fill={
                      {
                        "payload": 4294967295,
                        "type": 0,
                      }
                    }
                    propList={
                      [
                        "fill",
                      ]
                    }
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
            <Text
              accessible={true}
              color="interactive.text.onPrimary.normal"
              data-blade-component="base-text"
              fontSize={200}
              fontWeight="medium"
              lineHeight={200}
              marginX="spacing.2"
              style={
                [
                  {
                    "color": "hsla(0, 0%, 100%, 1)",
                    "fontFamily": "Inter",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "500",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "marginBottom": 0,
                    "marginLeft": 4,
                    "marginRight": 4,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textAlign": "center",
                    "textDecorationLine": "none",
                  },
                ]
              }
              textAlign="center"
            >
              Create payment
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
